Frontend_React/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
@import url('https://fonts.googleapis.com/css?family=Black+Ops+One');

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    background: #223a52;
    overflow-x: hidden;
    transition-property: all;
    transition-timing-function: cubic-bezier(.81,.04,.41,1.27);
    transition-duration: 150ms;
}

/*Loading Spinner*/
@keyframes loader-rotate {
    0% {
        transform: rotate(0);
    }
    100% {
        transform: rotate(360deg);
    }
}
.loader {
    border-right-color: transparent;
    animation: loader-rotate 1s linear infinite;
}



/*Stamped Style Header Logo*/
.rubber-female {
    box-shadow: 0 0 0 3px #739484, 0 0 0 2px #739484 inset;
    border: 2px solid transparent;
    border-radius: 4px;
    display: inline-block;
    padding: 5px 2px;
    line-height: 22px;
    color: #739484;
    font-size: 24px;
    font-family: 'Black Ops One', cursive;
    text-transform: uppercase;
    text-align: center;
    opacity: 0.4;
    width: 155px;
    transform: translate(-225%,-90%) rotate(-30deg) ;

}

.rubber-male {
    box-shadow: 0 0 0 3px #219be1, 0 0 0 2px #219be1 inset;
    border: 2px solid transparent;
    border-radius: 4px;
    display: inline-block;
    padding: 5px 2px;
    line-height: 22px;
    color: #219be1;
    font-size: 24px;
    font-family: 'Black Ops One', cursive;
    text-transform: uppercase;
    text-align: center;
    opacity: 0.4;
    width: 155px;
    transform: translate(225%,-90%)  rotate(30deg);

}

@media screen and (max-width: 1024px) {
    .rubber-male {
        transform: translate(170%,-100%) rotate(20deg);
        padding: 5px 3px;
        line-height: 20px;
        color: #219be1;
        font-size: 15px;
        width: 133px;
    }
    .rubber-female {
        transform: translate(-170%,-100%) rotate(-20deg);
        padding: 5px 3px;
        line-height: 20px;

        font-size: 15px;
        width: 133px;
    }
}

@media screen and (max-width: 640px) {
    .rubber-male {

        transform: translate(0%,20%) rotate(6deg);
        padding: 6px 3px;
        line-height: 20px;
        font-size: 13px;
        width: 273px;

    }
    .rubber-female {
        transform: translate(0%,20%) rotate(-6deg);
        padding: 6px 3px;
        line-height: 20px;

        font-size: 13px;
        width:273px;

    }
}




/*Gender Toggle Radio*/
@keyframes slide-to-male {
    0% {
        transform: translateX(100%) scale(0.8) rotate(15deg);
        opacity: 0.7;
    }
    50% {
        transform: scale(1.1) rotate(-10deg);
        opacity: 1;
    }
    100% {
        transform: translateX(0) scale(1) rotate(0deg);
        opacity: 1;
    }
}

@keyframes slide-to-female {
    0% {
        transform: translateX(0);
    }

    100% {
        transform: translateX(100%) scale(1) ;

    }
}

